# ckb-x64-simulator

./: Cargo.toml  README.md  build.rs
.github/workflows/: cargo-publish.yaml  rust.yaml
include/: api.h
src/: constants.rs  dlopen.c  global_data.rs  lib.rs  process_info.rs  simulator_context.rs  spawn.rs  utils.rs  vm_info.rs
tests/: .gitignore  Cargo.toml  Makefile  README.md
tests/contracts/exec-child/: Cargo.toml  README.md
tests/contracts/exec-child/src/: main.rs
tests/contracts/exec-parent/: Cargo.toml  README.md
tests/contracts/exec-parent/src/: main.rs
tests/contracts/spawn-cases/: Cargo.toml  README.md
tests/contracts/spawn-cases/src/: main.rs
tests/contracts/spawn-child/: Cargo.toml
tests/contracts/spawn-child/src/: main.rs
tests/contracts/spawn-parent/: Cargo.toml  Makefile
tests/contracts/spawn-parent/src/: main.rs
tests/libs/ckb-std-wrapper/: Cargo.toml
tests/libs/ckb-std-wrapper/src/: lib.rs
tests/libs/spawn_cmd/: Cargo.toml
tests/libs/spawn_cmd/src/: lib.rs
tests/native-simulators/exec-child-sim/: Cargo.toml  README.md
tests/native-simulators/exec-child-sim/src/: lib.rs
tests/native-simulators/exec-parent-sim/: Cargo.toml  README.md
tests/native-simulators/exec-parent-sim/src/: lib.rs
tests/native-simulators/spawn-cases-sim/: Cargo.toml
tests/native-simulators/spawn-cases-sim/src/: lib.rs
tests/native-simulators/spawn-child-sim/: Cargo.toml  README.md
tests/native-simulators/spawn-child-sim/src/: lib.rs
tests/native-simulators/spawn-parent-sim/: Cargo.toml  README.md
tests/native-simulators/spawn-parent-sim/src/: lib.rs
tests/tests/: Cargo.toml
tests/tests/src/: lib.rs  tests.rs  tests_spawn_cases.rs
