[package]
name = "ckb-x64-simulator"
description = "A simulator that allows running CKB smart contracts on x64 environment for tooling benefits"
version = "0.5.0"
license = "MIT"
authors = ["Nervos Core Dev <dev@nervos.org>"]
edition = "2018"
build = "build.rs"

[lib]
crate-type = ["lib", "staticlib", "cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-standalone-debugger = "0.20.0-rc5"
ckb-types = "0.100.0"
faster-hex = "0.6"
lazy_static = "1.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[build-dependencies]
cc = "1.0"
