[workspace]
resolver = "2"

members = [
  # Please don't remove the following line, we use it to automatically
  # detect insertion point for newly generated crates.
  # @@INSERTION_POINT@@
  "native-simulators/spawn-cases-sim",
  "native-simulators/spawn-child-sim",
  "native-simulators/spawn-parent-sim",
  "native-simulators/exec-child-sim",
  "native-simulators/exec-parent-sim",
  "contracts/spawn-cases",
  "contracts/spawn-child",
  "contracts/spawn-parent",
  "contracts/exec-child",
  "contracts/exec-parent",
  "contracts/exec-parent",
  "libs/spawn_cmd",
  "libs/ckb-std-wrapper",
  "tests",
]

[profile.release]
overflow-checks = true
strip = false
codegen-units = 1
debug = true
