[package]
name = "spawn-child-sim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
spawn-child = { path = "../../contracts/spawn-child", features = ["native-simulator"] }
ckb-std-wrapper = { path = "../../libs/ckb-std-wrapper" }

[lib]
crate-type = ["cdylib"]
